--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "lite-server -c little-server.json"
+    "server": "lite-server -c little-server.json",
+    "ganache":"ganache-cli -h 0.0.0.0 --blockTime 1"
   },
   "repository": {
     "type": "git",
