--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "lite-server -c little-server.json",
-    "ganache": "ganache-cli -h 0.0.0.0 --blocktime 1"
+    "ganache": "ganache-cli -h 0.0.0.0 --blockTime 1"
   },
   "repository": {
     "type": "git",
