--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "truffle-config.js",
   "dependencies": {
+    "angular": "^1.7.8",
     "ganache-cli": "^6.3.0",
     "lite-server": "^2.4.0"
   },
